Fixed error page layout issues after logo and nav design changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,7 +166,7 @@ main {
 #search-sub {
     font-size: 1rem;
     margin-top: 0;
-    margin-bottom: 5px;
+    margin-bottom: 1.2rem;
     letter-spacing: 1.1px;
 }
 
